--- a/tomkit-json/pom.xml
+++ b/tomkit-json/pom.xml
@@ -12,9 +12,22 @@
     <artifactId>tomkit-json</artifactId>
     <packaging>jar</packaging>
 
-    <name>tomkit-json</name>
-    <url>https://github.com/yanhu32/tomkit/tree/main/tomkit-json</url>
-
     <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
     </dependencies>
 </project>
