--- a/tomkit-core/pom.xml
+++ b/tomkit-core/pom.xml
@@ -3,22 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>tomkit-all</artifactId>
+        <artifactId>tomkit</artifactId>
         <groupId>io.github.yanhu32</groupId>
         <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>tomkit-core</artifactId>
+    <version>1.0.1</version>
     <packaging>jar</packaging>
-    <dependencies>
-        <dependency>
-            <groupId>org.jetbrains</groupId>
-            <artifactId>annotations</artifactId>
-            <version>13.0</version>
-            <scope>compile</scope>
-        </dependency>
-    </dependencies>
 
+    <dependencies>
+    </dependencies>
 
 </project>
