--- a/tomkit-core/pom.xml
+++ b/tomkit-core/pom.xml
@@ -15,7 +15,7 @@
 
     <name>tomkit-core</name>
     <description>
-        Java开发核心工具包，集天下之大成，化繁为简。
+        tomkit核心工具包
     </description>
     <url>https://github.com/yanhu32/tomkit/tree/main/tomkit-core</url>
 
